--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
    "main": "./server/server.js",
    "scripts": {
       "start": "cross-env NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
-      "builded": "cross-env NODE_ENV=development node ./build/server.js",
+      "builded": "cross-env NODE_ENV=development node ./build//server/server.js",
       "unit-tests": "cross-env NODE_ENV=test mocha --opts build/tests/unit/config/mocha.opts ./build/tests/unit/unit.test.js",
       "integration-tests": "cross-env NODE_ENV=test mocha --opts build/integration/unit/config/mocha.opts ./build/tests/integration/integration.test.js",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
-   "author": "Denerson Nobre", 
+   "author": "Denerson Nobre",
    "license": "ISC",
    "dependencies": {
       "body-parser": "^1.18.1",
@@ -35,6 +35,6 @@
       "supertest": "^3.0.0",
       "testdouble": "^3.2.5",
       "ts-node": "^3.3.0",
-      "typescript": "^2.5.2"
+      "typescript": "^2.4.2"
    }
 }
